--- a/src/projects/projects.css
+++ b/src/projects/projects.css
@@ -25,8 +25,13 @@
 
 
 .projectImage {
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
+    height:330px;
+    width:480px;
+    border-radius:30px;
+    border: 3px solid aqua;
+    
 }
 
 .heading5 {
@@ -45,6 +50,7 @@
     font-size: 16px;
     line-height: 30px;
     font-weight: 400;
+    
     color: #ffffffb3;
     
 }
