--- a/src/projects/projects.css
+++ b/src/projects/projects.css
@@ -25,10 +25,10 @@
 
 
 .projectImage {
-    /* height: 100%;
-    width: 100%; */
-    height:330px;
-    width:480px;
+    height: 100%;
+    width: 100%;
+    /* height:330px;
+    width:480px; */
     border-radius:30px;
     border: 3px solid aqua;
     
