--- a/src/projects/projects.css
+++ b/src/projects/projects.css
@@ -39,6 +39,7 @@
     font-weight: 600;
     font-size: 24px;
     color: white;
+    margin-top:30px;
     scroll-behavior: smooth;
 
 }
@@ -50,7 +51,6 @@
     font-size: 16px;
     line-height: 30px;
     font-weight: 400;
-    
     color: #ffffffb3;
     
 }
