--- a/src/nav/nav.css
+++ b/src/nav/nav.css
@@ -57,6 +57,13 @@
   /* Position the close button (top right corner) */
   .overlay .closebtn {
     position: absolute;
+    background: none;
+    border: none;
+    color: white;
+    font: inherit;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
     top: 20px;
     right: 45px;
     font-size: 40px;
